--- a/TechShop/TechShop/Templates/Register.html
+++ b/TechShop/TechShop/Templates/Register.html
@@ -1,88 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-   <link rel = "stylesheet" href="index.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    
-    <script src="jquery-3.4.1.js"></script>
-</head>
-<body>
-        <div id = "registerform">
-            <h4>Create Account</h4>
-                <form id="form" action="Home.html" method="POST">
-                    <div class="form-group">
-                        <div class="result">
-                            <label for = "firstname"> First Name:</label>
-                            <input type="text" class="form-control" id="firstname"> 
-                            <i class="fa fa-check-circle"></i>
-                            <i class="fa fa-exclamation-circle"></i>
-                            <small>Error Message</small>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="result">
-                            <label for = "lastname"> Last Name:</label>
-                            <input type="text" class="form-control" id="lastname">
-                            <i class="fa fa-check-circle"></i>
-                            <i class="fa fa-exclamation-circle"></i>
-                            <small>Error Message</small>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="result">
-                            <label for = "email"> Email address:</label>
-                            <input type="email" class="form-control" id="email">
-                            <i class="fa fa-check-circle"></i>
-                            <i class="fa fa-exclamation-circle"></i>
-                            <small>Error Message</small>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="result">
-                            <label for = "pwd"> Create Password:</label>
-                            <input type="password" class="form-control" id="pwd">
-                            <i class="fa fa-check-circle"></i>
-                            <i class="fa fa-exclamation-circle"></i>
-                            <small>Error Message</small>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="result">
-                            <label for = "pwd"> Confirm Password:</label>
-                            <input type="password" class="form-control" id="cpwd">
-                            <i class="fa fa-check-circle"></i>
-                            <i class="fa fa-exclamation-circle"></i>
-                            <small>Error Message</small>
-                        </div>
-                    </div>
-                    <br>
-                    <input type="submit" class="btn btn-dark" name ="signin" value="Create Account">
-                </form>
-        </div>
-    </body>
-    <script src="FormValidation.js"></script>
-</html>
-
-
-
 {% extends 'base.html' %}
 {% block title %}
-    Second Hand
+    Register
 {% endblock %}
 {% block content %}
     <div id = "registerform">
         <h4>Create Account</h4>
-        <form id="form" action="Home.html" method="POST">
+        <form id="form" method="POST" action="{% url 'register' %}">
+            {% csrf_token %}
             <div class="form-group">
                 <div class="result">
                     <label for = "firstname"> First Name:</label>
-                    <input type="text" class="form-control" id="firstname"> 
+                    <input type="text" class="form-control" id="firstname" name = "firstname"> 
                     <i class="fa fa-check-circle"></i>
                     <i class="fa fa-exclamation-circle"></i>
                     <small>Error Message</small>
@@ -91,7 +19,16 @@
             <div class="form-group">
                 <div class="result">
                     <label for = "lastname"> Last Name:</label>
-                    <input type="text" class="form-control" id="lastname">
+                    <input type="text" class="form-control" id="lastname" name = "lastname">
+                    <i class="fa fa-check-circle"></i>
+                    <i class="fa fa-exclamation-circle"></i>
+                    <small>Error Message</small>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="result">
+                    <label for = "username"> Username:</label>
+                    <input type="text" class="form-control" id="username" name = "username">
                     <i class="fa fa-check-circle"></i>
                     <i class="fa fa-exclamation-circle"></i>
                     <small>Error Message</small>
@@ -100,7 +37,7 @@
             <div class="form-group">
                 <div class="result">
                     <label for = "email"> Email address:</label>
-                    <input type="email" class="form-control" id="email">
+                    <input type="email" class="form-control" id="email" name = "email">
                     <i class="fa fa-check-circle"></i>
                     <i class="fa fa-exclamation-circle"></i>
                     <small>Error Message</small>
@@ -109,7 +46,7 @@
             <div class="form-group">
                 <div class="result">
                     <label for = "pwd"> Create Password:</label>
-                    <input type="password" class="form-control" id="pwd">
+                    <input type="password" class="form-control" id="pwd" name = "password"> 
                     <i class="fa fa-check-circle"></i>
                     <i class="fa fa-exclamation-circle"></i>
                     <small>Error Message</small>
@@ -118,7 +55,7 @@
             <div class="form-group">
                 <div class="result">
                     <label for = "pwd"> Confirm Password:</label>
-                    <input type="password" class="form-control" id="cpwd">
+                    <input type="password" class="form-control" id="cpwd" name = "cpassword">
                     <i class="fa fa-check-circle"></i>
                     <i class="fa fa-exclamation-circle"></i>
                     <small>Error Message</small>
