--- a/TechShop/TechShop/Templates/Login.html
+++ b/TechShop/TechShop/Templates/Login.html
@@ -5,13 +5,15 @@
 {% endblock %}
 {% block content %}
     <div id = "login">
-        <h4>Create Account</h4>
+        <h4>Login</h4>
         <form id = "form" action="{% url 'login' %}" method="POST">
+
             {% csrf_token %}
             <div class="form-group">
                 <label for = "username"> Username:</label>
                 <input type="text" class="form-control" placeholder="Enter Username" name="username">
             </div>
+
             <div class="form-group">
                 <label for = "pwd"> Password:</label>
                 <input type="password" class="form-control" placeholder="Enter Password" name="password">
@@ -19,6 +21,7 @@
             
             <input type="submit" class = "btn btn-dark" name ="Login" value="Login">
             <p>Don't have accout <a href="{% url 'register' %}">Create one</a> </p>
+            
         </form>
     </div>
 {% endblock %}
