--- a/TechShop/TechShop/Templates/SecondHand.html
+++ b/TechShop/TechShop/Templates/SecondHand.html
@@ -3,10 +3,22 @@
     Second Hand
 {% endblock %}
 {% block content %}
+
+    <br><br>
+    <form class="d-flex justify-content-center" id="CRUD2" action="{% url 'secondview' user.id %}">
+        <button class="btn btn-dark">View</button>
+    </form>
+
     <div class="Container">
         <h4> Second Hand Devices </h4>
-        <div class = "contents container bg-dark">
-            
-        </div>
+            <div class = "Products">
+                {%for products in secondhand %}
+                <div class="products" onclick="location.href='#'">
+                    <img src = "{{products.Image.url}}" alt="product's Desc">
+                    <p>{{products.ProductName}}</p>
+                    <p> ${{products.Price}}</p>
+                </div>
+                {% endfor %} 
+            </div>
     </div>
 {% endblock %}
