--- a/TechShop/TechShop/Templates/About.html
+++ b/TechShop/TechShop/Templates/About.html
@@ -4,9 +4,11 @@
 {% endblock %}
 {% block content %}
     <div class="container" id="aboutus">
+
+        <br><br>
         <h1 class="aboutus">About Us</h1>
         <br>
-        <br>
+        
         <h2>Tech Shop</h2>
         <p>
             Tech shop is an online Shopping store providing you the best products with a competitive price.
@@ -18,7 +20,7 @@
         </p>
 
         <p>
-            Come <a href="Register.html">join us</a> to get more new technical gadgets. Feel free to 
+            Come <a href="Register.html"><strong>join us</strong></a> to get more new technical gadgets. Feel free to 
             contact us, we will reply as fast as possible. 
             <h5>Email: <strong>official@techshop.com<strong></h5>  
         </p>
