--- a/TechShop/TechShop/Templates/SecondView.html
+++ b/TechShop/TechShop/Templates/SecondView.html
@@ -5,31 +5,35 @@
     Second Hand View
 {% endblock %}
 {% block content %}
-<table class="table table-striped">
-    <thead class="thead-dark"  scope="col">
-        <th>Image</th>
-        <th>ProductName</th>
-        <th>Price</th>
-        <th>Description</th> 
-        <th>Used Details</th>
-        <th>Action</th>
-    </thead>
-
-    {% for product in products %} 
-        <tr>
-            <tbody>
-                {% load static %}
-                <td><img class="rounded" width="40" src="{{product.Image.url}}" /></td>
-                <td>{{product.ProductName}}</td>
-                <td>{{product.Price}}</td>
-                <td>{{product.Description}}</td>
-                <td>{{product.Used_Details}}</td>
-                <td><a href="{% url 'secondupdate' product.id %}">Edit</a>||<a href="{% url 'seconddelete' product.id %}">Delete</a></td>
-            </tbody>
-        </tr>
-    {% endfor %}
-</table>
+<div class="container">
+    <table class="table table-striped table-responsive">
+        <thead class="thead-dark"  scope="col">
+            <th>Image</th>
+            <th>ProductName</th>
+            <th>Price</th>
+            <th>Description</th> 
+            <th>Used Details</th>
+            <th>Action</th>
+        </thead>
+    
+        <tbody>
+            {% for product in products %} 
+                <tr>
+                    {% load static %}
+                    <td><img class="rounded" width="100" src="{{product.Image.url}}" /></td>
+                    <td>{{product.ProductName}}</td>
+                    <td>{{product.Price}}</td>
+                    <td>{{product.Description}}</td>
+                    <td>{{product.Used_Details}}</td>
+                    <td><a href="{% url 'secondupdate' product.id %}">Edit</a>||<a href="{% url 'seconddelete' product.id %}">Delete</a></td>
+                </tr>
+            {% endfor %}
+        </tbody>
+        
+    </table>
     <form action="{% url 'secondadd' %}" class="d-flex justify-content-center" >  
         <button class = "btn btn-dark"> Add</button>
     </form>
+</div>
+    
 {% endblock %}
