--- a/TechShop/TechShop/Templates/Register.html
+++ b/TechShop/TechShop/Templates/Register.html
@@ -4,9 +4,12 @@
 {% endblock %}
 {% block content %}
     <div id = "registerform">
-        <h4>Create Account</h4>
         <form id="form" method="POST" action="{% url 'register' %}">
             {% csrf_token %}
+            {% load static %}
+
+            <h4 class="d-flex justify-content-center">Create Account</h4>
+            <br>
             <div class="form-group">
                 <div class="result">
                     <label for = "firstname"> First Name:</label>
@@ -62,7 +65,12 @@
                 </div>
             </div>
             <br>
-            <input type="submit" class="btn btn-dark" name ="signin" value="Create Account">
+            <div class="d-flex justify-content-center">
+                <input type="submit" class="btn btn-dark" name ="signin" value="Create Account">
+            </div>
+            
         </form>
     </div>
+    
+    <script src="{% static 'FormValidation.js' %}"></script>
 {% endblock %}
