--- a/TechShop/TechShop/Templates/Transaction.html
+++ b/TechShop/TechShop/Templates/Transaction.html
@@ -2,38 +2,27 @@
 {% load static %}
 
 {% block title %}
-    Cart
+    Transaction
 {% endblock %}
 {% block content %}
-<div class="transaction">
 
+<div class = "d-flex justify-content-center">
+    <div class="transaction-container">
+        <div class="img-thumbnail">
+            <img src="{{products.Image.url}}" alt="{{products.price}} picture">
+        </div>
+        <p><strong>{{products.Price}}</strong></p>
+        <p>{{products.ProductName}}</p>
+        <p>{{products.Description}}</p>   
+        <p>{{products.Used_Details}}</p>
+        <br>
+        {% if products.UserId is not NULL %}
+            <a href="{% url 'scart' products.id %}"><button class="btn btn-dark">Add to Cart</button></a>
+        {% else %}
+            <a href="{% url 'cart' products.id %}"><button class="btn btn-dark">Add to Cart</button></a>
+        {% endif %}
+          
+    </div>
 </div>
-<table class="table table-striped">
-    <thead class="thead-dark"  scope="col">
-        <th>Image</th>
-        <th>ProductName</th>
-        <th>Price</th>
-        <th>Description</th> 
-        <th>Action</th>
-    </thead>
 
-    
-    {% for product in products %} 
-        <tr>
-            <tbody>
-                {% load static %}
-                <td><img class="rounded" width="40" src="{{product.Image.url}}" /></td>
-                <td>{{product.ProductName}}</td>
-                <td>{{product.Price}}</td>
-                <td>{{product.Description}}</td>
-
-
-                <td><a href="{% url 'edit' product.id %}">Edit</a>||<a href="{% url 'delete' product.id %}">Delete</a></td>
-            </tbody>
-        </tr>
-    {% endfor %}
-</table>
-    <form action="{% url 'add' %}" class="d-flex justify-content-center" >  
-        <button class = "btn btn-dark"> Add</button>
-    </form>
 {% endblock %}
