--- a/TechShop/TechShop/Templates/View.html
+++ b/TechShop/TechShop/Templates/View.html
@@ -5,7 +5,7 @@
     View
 {% endblock %}
 {% block content %}
-<table class="table table-striped">
+<table class="table table-striped table-responsive">
     <thead class="thead-dark"  scope="col">
         <th>Image</th>
         <th>ProductName</th>
@@ -15,20 +15,20 @@
     </thead>
 
     
+    <tbody>
     {% for product in products %} 
         <tr>
-            <tbody>
-                {% load static %}
-                <td><img class="rounded" width="40" src="{{product.Image.url}}" /></td>
-                <td>{{product.ProductName}}</td>
-                <td>{{product.Price}}</td>
-                <td>{{product.Description}}</td>
+            {% load static %}
+            <td><img class="rounded" width="100" src="{{product.Image.url}}" /></td>
+            <td>{{product.ProductName}}</td>
+            <td>{{product.Price}}</td>
+            <td>{{product.Description}}</td>
 
-
-                <td><a href="{% url 'update' product.id %}">Edit</a>||<a href="{% url 'delete' product.id %}">Delete</a></td>
-            </tbody>
+            <td><a href="{% url 'update' product.id %}">Edit</a>||<a href="{% url 'delete' product.id %}">Delete</a></td>
+        
         </tr>
     {% endfor %}
+    </tbody>
 </table>
     <form action="{% url 'add' %}" class="d-flex justify-content-center" >  
         <button class = "btn btn-dark"> Add</button>
