--- a/TechShop/TechShop/Templates/base.html
+++ b/TechShop/TechShop/Templates/base.html
@@ -8,9 +8,13 @@
             {% endblock %}
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        
+        
         <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
         <link rel = "stylesheet" href="{% static 'index.css' %}">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="{% static 'fonts.js' %}"></script>
+        <!-- <link rel="stylesheet" href="{% static 'fontawesome.min.css' %}"> -->
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     </head>
     <body>
         <div class = "header">
@@ -19,50 +23,83 @@
                 <span><p>Free Ship All Over Nepal</p></span>
             </div>
             <br>
-            <div class = "nav_container">
-                <nav class="navbar navbar-expand bg-white">
-                    <div class="row">
-                        <div id="logo">
-                            <a href="{% url 'home' %}"><img src="{% static 'pic/Weblogo.png' %}" alt = "Logo of Tech Shop"></a>
-                        </div>
-                        <div class="right">
-                            <ul class="navbar-nav">
-                                <li class="nav-item" id ="search">
-                                    <input type="text" class = "search-box" placeholder="Search..">
-                                    <button type="submit" class="btn"><i class="fa fa-search"></i></button>
-                                </li>
-                                <li class="nav-item">
-                                    <a class = "nav-link text-dark" href="{% url 'home' %}">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class = "nav-link text-dark" href="{% url 'secondhand' %}">Second Hand</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" href="{% url 'aboutus' %}">About us</a>
-                                </li>
-                                {% if user.is_authenticated %}
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" href="{% url 'logout' %}">Log Out</a>
-                                </li>
-                                {% else %}
-                                
-                                <li class="nav-item">
-                                <a class = "nav-link" id = "login" href="{% url 'login' %}"><img src="{% static 'pic/usericon.png' %}" alt="login"></a>
-                                </li>
-                                {% endif %}
+            
+            <div class="nav_container">
+                <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                    <div id="logo">
+                        <a href="{% url 'home' %}"><img src="{% static 'pic/Weblogo.png' %}" alt = "Logo of Tech Shop"></a>
+                    </div>
+                    
+                    <div class="right">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav mr-auto">
+                              <li class="nav-item">
+                                  <a class = "nav-link text-dark" href="{% url 'home' %}">Home</a>
+                              </li>
+      
+                              <li class="nav-item">
+                                  <a class = "nav-link text-dark" href="{% url 'secondhand' %}">Second Hand</a>
+                              </li>
+      
+                              <li class="nav-item">
+                                  <a class="nav-link text-dark" href="{% url 'aboutus' %}">About us</a>
+                              </li>
+      
+                              <li class="nav-item">
+                                  <a class = "nav-link text-dark" href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Cart</a>
+                              </li>
+                              <li class="nav-item dropdown">
+                                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                                      <i class="fas fa-user"></i>
+                                    <span>Account</span>
+                                    </a>
+                                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                      {% if user.is_authenticated %}
+                                          {% if user.is_superuser%}
+                                              <button type ="button" class="dropdown-item" disabled>Admin</button>
+                                              <a class="dropdown-item" href="{% url 'view'%}">Products</a>
+                                              <a class="dropdown-item" href="{% url 'secondview' user.id %}">Second Hand</a>
+                                              <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                                          {% else %}
+                                              <button type ="button" class="dropdown-item" disabled>{{user.username}}</button>
+                                              <a class="dropdown-item" href="{% url 'secondview' user.id %}">Products</a>
+                                              <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                                          {% endif %}
+                                      {% else %}
+                                          <a class="dropdown-item" href="{% url 'login' %}">Log in</a>
+                                          <a class="dropdown-item" href="{% url 'register' %}">Sign up</a>
+                                      {% endif %}
+                                  </div>
+                              </li>
                             </ul>
                         </div>
                     </div>
                     
+                    
                 </nav>
-                
                 <hr class="line">
-            </div>
+            </div> 
         </div>
-        <div>
             {% if messages %}
                 {% for message in messages %}
-                <p>{{ message }}</p>
+                    {% if user.is_authenticated %}
+                        <div class="alert alert-success container" role="alert">
+                            <button type = "button" class="close" data-dismiss="alert" arial-label="Close">
+                                <span arial-hidden = "true" style="font-size: 20px;">x</span>
+                            </button>
+                            {{ message }}
+                        </div>
+                    {%else%}
+                    <div class="alert alert-danger container" role="alert">
+                        <button type = "button" class="close" data-dismiss="alert" arial-label="Close">
+                            <span arial-hidden = "true" style="font-size: 20px;">x</span>
+                        </button>
+                        {{ message }}
+                    </div>
+                    {%endif%}
                 {% endfor %}
             {% endif %}
         </div>
@@ -85,7 +122,11 @@
         </div> 
     </body>
     
-    <!-- <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script> -->
-    <script src="{% static 'FormValidation.js' %}"></script>
-    <script src=" {% static 'animation.js' %}"></script>
+    <script></script>
+    <script src="{% static 'bootstrap/js/popper.min.js'%}"></script>
+    <script src="{% static 'jquery-3.4.1.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'animation.js' %}"></script>
+    
 </html>
