--- a/TechShop/TechShop/Templates/SecondView.html
+++ b/TechShop/TechShop/Templates/SecondView.html
@@ -10,7 +10,7 @@
         <thead class="thead-dark"  scope="col">
             <th>Image</th>
             <th>ProductName</th>
-            <th>Price</th>
+            <th>Price- $</th>
             <th>Description</th> 
             <th>Used Details</th>
             <th>Action</th>
