--- a/TechShop/TechShop/Templates/Transaction.html
+++ b/TechShop/TechShop/Templates/Transaction.html
@@ -11,7 +11,7 @@
         <div class="img-thumbnail">
             <img src="{{products.Image.url}}" alt="{{products.price}} picture">
         </div>
-        <p><strong>{{products.Price}}</strong></p>
+        <p><strong>Price - ${{products.Price}}</strong></p>
         <p>{{products.ProductName}}</p>
         <p>{{products.Description}}</p>   
         <p>{{products.Used_Details}}</p>
