--- a/TechShop/TechShop/Templates/base.html
+++ b/TechShop/TechShop/Templates/base.html
@@ -13,8 +13,8 @@
         <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
         <link rel = "stylesheet" href="{% static 'index.css' %}">
         <script src="{% static 'fonts.js' %}"></script>
-        <!-- <link rel="stylesheet" href="{% static 'fontawesome.min.css' %}"> -->
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+        <link rel="stylesheet" href="{% static 'fontawesome.min.css' %}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class = "header">
