--- a/TechShop/TechShop/Templates/Cart.html
+++ b/TechShop/TechShop/Templates/Cart.html
@@ -9,7 +9,7 @@
             <thead class="thead-dark"  scope="col">
                 <th>Image</th>
                 <th>ProductName</th>
-                <th>Price</th>
+                <th>Price- $</th>
                 <th>Action</th>
             </thead>
             <tbody>
