--- a/TechShop/TechShop/static/index.css
+++ b/TechShop/TechShop/static/index.css
@@ -21,6 +21,7 @@ a{
     margin-right: 10%;
 }
 .navbar{
+    font-size: 18px !important;
     max-width: 90%;
     margin-left: 5%;
     border-style: solid;
